--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,14 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".view.main.MainActivity">
+
+        </activity>
+
+        <!--Sample Page-->
+        <activity android:name=".view.sample.Sample">
+
+        </activity>
     </application>
 
 </manifest>
